--- a/Juno/tower/src/styles.less
+++ b/Juno/tower/src/styles.less
@@ -1,5 +1,35 @@
 @import "./theme.less";
 
+// 滚动条整体样式
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+::-webkit-scrollbar-thumb:hover {
+	background-color: #777;
+}
+// 滚动条里面小方块
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: @primary-5;
+  background-image: -webkit-linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.2) 25%,
+    transparent 25%,
+    transparent 50%,
+    rgba(255, 255, 255, 0.2) 50%,
+    rgba(255, 255, 255, 0.2) 75%,
+    transparent 75%,
+    transparent
+  );
+}
+// 滚动条里面轨道
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  background: #ededed;
+  border-radius: 10px;
+}
+
 nz-spin {
   width: 100%;
   height: 100%;
@@ -18,17 +48,17 @@ nz-spin {
 }
 
 .ant-modal-wrap {
-  .ant-modal {
+  .tile {
     overflow: auto;
     top: 0;
     height: 100%;
     padding: 30px 0;
-    &-content {
+    .ant-modal-content {
       height: 100%;
       display: flex;
       flex-direction: column;
     }
-    &-body {
+    .ant-modal-body {
       overflow: auto;
       height: 100%;
     }
