权限通用化

--- a/Juno/tower/src/app/auth/login/login.component.html
+++ b/Juno/tower/src/app/auth/login/login.component.html
@@ -30,4 +30,4 @@
     </form>
   </nz-card>
 </div>
-<app-slide-captcha #slideCaptcha (succeed)="login($event)"></app-slide-captcha>
+<app-slide-captcha #slideCaptcha (succeed)="login($event)" (closed)="loginLoading = false"></app-slide-captcha>
