--- a/Juno/tower/src/app/bench/layout/layout.component.html
+++ b/Juno/tower/src/app/bench/layout/layout.component.html
@@ -17,7 +17,8 @@
         </span>
         <span class="header-user">
           <span class="header-user-username">{{user?.username}}</span>
-          <a class="header-user-logout" nz-button nzSize="small" nzType="link" (click)="logout()"><i nz-icon nzType="logout"></i>退出</a>
+          <a class="header-user-logout" nz-button nzSize="small" nzType="link" (click)="logout()"><i nz-icon
+              nzType="logout"></i>退出</a>
         </span>
       </div>
     </nz-header>
