--- a/Juno/tower/src/app/bench/pages/home/home.component.html
+++ b/Juno/tower/src/app/bench/pages/home/home.component.html
@@ -1,3 +1,5 @@
 <nz-layout>
-  <nz-content><div appGraph></div></nz-content>
+  <nz-content>
+    <app-dashboard label="home_dashboard"></app-dashboard>
+  </nz-content>
 </nz-layout>
