--- a/Juno/tower/src/styles.less
+++ b/Juno/tower/src/styles.less
@@ -47,6 +47,15 @@ nz-spin {
   }
 }
 
+.fullscreen {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
+
 .ant-modal-wrap {
   .tile {
     overflow: auto;
